--- a/Schack/Schack.vcxproj.filters
+++ b/Schack/Schack.vcxproj.filters
@@ -112,5 +112,8 @@
     <ClInclude Include="Square.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PieceHeader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
