--- a/Schack/Schack.vcxproj
+++ b/Schack/Schack.vcxproj
@@ -92,7 +92,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>C:\Users\Per\Documents\GitHub\Schack\SFML-2.3\lib;J:\TredProgrammeringen\Projektet\Schack\SFML-2.2\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>sfml-window.lib;sfml-main.lib;sfml-system.lib;sfml-graphics.lib;opengl32.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>sfml-window-d.lib;sfml-main-d.lib;sfml-system-d.lib;sfml-graphics-d.lib;opengl32.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
   </ItemDefinitionGroup>
@@ -131,6 +131,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>J:\TredProgrammeringen\Projektet\Schack\SFML-2.2\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>sfml-window.lib;sfml-main.lib;sfml-system.lib;sfml-graphics.lib;opengl32.lib;winmm.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -169,6 +170,11 @@
     <ClCompile Include="System.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\SFML-2.3\bin\sfml-audio-d-2.dll" />
+    <None Include="..\SFML-2.3\bin\sfml-graphics-d-2.dll" />
+    <None Include="..\SFML-2.3\bin\sfml-network-d-2.dll" />
+    <None Include="..\SFML-2.3\bin\sfml-system-d-2.dll" />
+    <None Include="..\SFML-2.3\bin\sfml-window-d-2.dll" />
     <None Include="libsndfile-1.dll" />
     <None Include="openal32.dll" />
     <None Include="sfml-graphics-2.dll" />
@@ -190,6 +196,9 @@
     <ClInclude Include="Rook.h" />
     <ClInclude Include="Square.h" />
     <ClInclude Include="System.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Font Include="OptimusPrinceps.ttf" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
